# hijriah-converter

./: .coveralls.yml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.txt  LICENSE  Makefile  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
hijri/: constant.py  core.py  date_utils.py  representation.py  version.py
tests/: test_hijri.py
