[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hijri-calendar"
version = "0.3.0"
description = "A package for converting Hijriah Calendar Day"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ryan Febriansyah", email = "15523163@alumni.uii.ac.id" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/sodrooome/hijriah-converter"
Repository = "https://github.com/sodrooome/hijriah-converter"

[tool.setuptools]
packages = ["hijri"]

[tool.setuptools.package-data]
hijri = ["py.typed"]

[tool.uv]
managed = true

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
